assets/stylesheets/master.css
* {
  margin: 0;
  padding: 0;
}

body {
  background: #FFFFF0;
  min-height: 660px;
  /* border: 3px solid; */
}

/* index-page */
.game-page-body {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
/*
.fas.fa-volume-mute.fa-2x, .fas.fa-volume-up.fa-2x {
  position: relative;
  right: -355px;
} */

#sound-button-off, #sound-button-on {
  position: relative;
  right: -260px;
  justify-content: center;
  align-items: center;
  font-family: 'Capriola', sans-serif;
}

#sound-button-off {
  display: flex;
}

#sound-button-on {
  display: none;
}

#sound-button-off i, #sound-button-on i {
  margin-left: 10px;
}


.game-section {
  width: 100%;
  min-width: 1250px;
  display: flex;
  justify-content: space-around;
  position: relative;
}

.current-stats-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* border: 1px solid; */
}

.current-stats-section li {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin-top: 10px;
}

#current-coin-count {
  margin-left: 10px;
}

.current-bacon {
  width: 23%;
}

.instructions-section {
  /* border: 1px solid; */
  /* height: 200px; */
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}


.choose-mode-text {
  /* height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 143px;
  background: white;
  color: black;
  border-radius: 5px;
  border: 1px solid;
  font-size: 20px;
  position: absolute;
  top: 150px;
  z-index: 1;
  font-family: 'Capriola', sans-serif; */
  /* font-family: 'Caveat Brush', cursive; */
}

.canvas-section {
  height: 450px;
  width: 750px;
}

canvas {
  position: absolute;
  height: 450px;
  width: 750px;
  border: 1px solid black;
  display: block;
  margin: 0px auto;
  /* background: blue; */
  /* background-image: url("https://pre00.deviantart.net/5e95/th/pre/f/2013/069/b/c/game_screen_background2_by_ubervestigium-d5xkmpv.png"); */
  background-size: cover;
  border-radius: 5px;
}

.canvas-cover {
  position: absolute;
  height: 450px;
  width: 750px;
  /* border: solid black; */
  /* margin: 0px auto; */
  border-radius: 5px;
  position: absolute;
  /* margin: 0px auto; */

  display: flex;
  justify-content: center;
  align-items: center;
  /* background: blue; */
}

/* .canvas-cover button {
  width: 200px;
  height: 70px;
  margin-top: 20px;
  border-radius: 5px;
  cursor: pointer;
  font-size: 20px;
  font-family: 'Righteous', cursive;
} */

.mode-buttons-div {
  width: 460px;
  display: flex;
  justify-content: space-between;
  margin-top: 130px;
}

/* canvas-pages */
.game-title {
  font-family: 'Rammetto One', cursive;
  font-size: 40px;
  margin: 0 auto;
  width: 341px;
  /* border: 2px solid; */
  margin-bottom: 15px;
  text-align: center;
}

.index-body {
  height: 100vh;
  background: gainsboro;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.index-middle-section {
  display: flex;
  justify-content: center;

}

.options-section  {
  border: 1px solid;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 200px;
  margin-left: 15px;
}

.options-section button {
  height: 50px;
  margin-top: 20px;
  border-radius: 5px;
  cursor: pointer;
  font-size: 20px;
  font-family: 'Architects Daughter', cursive;

}

.options-section button:hover, .play-link:hover {
  background: black;
}

.play-link {
  height: 50px;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 20px;
  font-family: 'Architects Daughter', cursive;
  background: white;
  text-decoration: none;
  color: black;
}

.mode-option-button {
  width: 200px;
  height: 70px;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 20px;
  /* font-family: 'Sigmar One', cursive; */
  /* font-family: 'Rammetto One', cursive; */
  /* font-family: 'Caveat Brush', cursive; */
  /* font-family: 'Architects Daughter', cursive; */
  font-family: 'Baloo Bhaina', cursive;
  background: white;
  text-decoration: none;
  color: black;
  cursor: pointer;
}

.mode-option-button:hover {
  background: lightgrey;
}

.regular-llama-figure {
  position: relative;
  bottom: -10px;
  z-index: 2;
}

.dressed-llama-figure {
  position: relative;
  bottom: -12px;
  z-index: 2;
}

.mode-descriptions {
  position: : absolute;
  z-index: 1;
  text-align: center;
  font-family: 'Caveat Brush', cursive;
}

.mode-descriptions img {
  position: relative;
  bottom: -30px;
}

.normal-mode-description, .flight-mode-description {
  /* font-size: 20px;
  border: 1px solid;
  border-radius: 5px; */
  position: absolute;
  width: 370px;
  display: none;
  height: 165px;
  margin-top: -40px;
}

.normal-mode-description p, .flight-mode-description p {
  font-size: 25px;
  /* border: 1px solid; */
  border-radius: 5px;
  background:rgba(255,255,255, 0.7);
}



.normal-mode-link-and-llama {
  margin-top: 3px;
}

.middle-sides {
  width: 230px;
  /* border: 1px solid; */
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  font-family: 'Capriola', sans-serif;
  min-height: 450px;
}

.right-panel-buttons {
  display: flex;
  flex-direction: column;
}

.right-panel-buttons button {
  width: 200px;
  height: 50px;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 20px;
  font-family: 'Baloo Bhaina', cursive;
  background: white;
  text-decoration: none;
  color: black;
  margin-bottom: 5px;
  cursor: pointer;
}

.right-panel-buttons button:hover {
  background: lightgrey;
}

.move-commands {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
}


.move-commands i {
  margin-left: 10px;
}

.weapon-commands {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.weapon-commands h4 {
  font-size: 18px;
}

.weapon-commands li {
  font-size: 21px;
  font-weight: bold;
  margin-bottom: 10px;
}

.weapon-list-commands {
  margin-top: 5px;
  border: 1px solid;
  border-radius: 5px;
  background: #99ddff;
  padding: 10px 5px 0px 5px;
  /* display: flex;
  flex-direction: column;
  align-items: center; */
}

.weapon-list-commands span {
  font-size: 15px;
}

footer {
  /* height: 100px;
  border: 1px solid;
  width: 100vw; */
  /* border: 1px solid; */
  margin-top: 30px;

}

footer figure {
  display: flex;
  justify-content: space-around;
  /* border: 1px solid; */
}

footer figure i {
  color: black;
  /* margin: 5px; */
}

footer figure i:hover {
  color: lightgrey;
}

footer span {
  font-family: 'Gochi Hand', cursive;
}

